@@ -760,7 +760,7 @@ struct typemanager {
 	short   tm_growth_percent;  /* percent to increase maxpages */
 	short   tm_percent_free;  /* percent which must be free after a gc for this type */
         short   tm_distinct;       /* pages of this type are distinct */
-
+        float   tm_adjgbccnt;
 };
 
 
